--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">ContrPickDota2</string>
+    <string name="attack_type_melee">Melee</string>
+    <string name="attack_type_ranged">Ranged</string>
 </resources>
