--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">ContrPickDota2</string>
     <string name="attack_type_melee">Melee</string>
     <string name="attack_type_ranged">Ranged</string>
+    <string name="state_loading">Loading...</string>
 </resources>
